# nucleo-stm32f411re-template

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindGDB.cmake  FindOpenOCD.cmake  gnu-arm-toolchain.cmake
gpio_toggle/: CMakeLists.txt  Makefile
gpio_toggle/linker/: STM32F411RETX_FLASH.ld
gpio_toggle/src/: init.c  main.c
gpio_toggle/startup/: startup_stm32f411retx.s
